--- a/_data/phds.yaml
+++ b/_data/phds.yaml
@@ -2,6 +2,7 @@
   title: On Walkup's class of manifolds and tight triangulations
   advisor: Basudeb Datta, Vijay Natarajan
   year: 2014
+  present: Researcher, IBM Research Center, Bangalore
 
 - name: A. C. Jain
   year: 1962
@@ -642,6 +643,7 @@
   year: 2001
   title: Two dimensional weak pseudomanifolds with few vertices
   advisor: Basudeb Datta
+  present: Associate Professor, IIT Kanpur
 
 - name: Nirmalendu Chaudhuri
   year: 2001
@@ -692,6 +694,7 @@
   year: 2005
   title: Degree-regular triangulations of the torus, the Klein bottle and the double torus
   advisor: Basudeb Datta
+  present: Associate Professor, IIT Patna
 
 - name: Siddhartha Mishra
   year: 2005
@@ -903,6 +906,7 @@
   year: 2015
   title: Minimal crystallizations of 3- and 4-manifolds
   advisor: Basudeb Datta
+  present: SERB Indo-US Research Fellow, Cornell University, USA.
 
 - name: Senthil Raani K. S.
   year: 2016
