--- a/_data/phds.yaml
+++ b/_data/phds.yaml
@@ -790,6 +790,7 @@
   year: 2012
   title: Relative symplectic caps, 4 genus and fibered knots
   advisor: S. Gadgil
+  present: Assistant Professor, IISER Bhopal
 
 - name: Dinesh K. Keshari
   year: 2012
@@ -855,6 +856,7 @@
   year: 2014
   title: On an ODE associated with the Ricci flow
   advisor: H. Seshadri
+  present: Assistant Professor, IISER Bhopal
 
 - name: Kamana Porwal
   year: 2014
@@ -916,7 +918,8 @@
 - name: Tulasi Ram Reddy A.
   year: 2016
   title: On critical points of random polynomials and spectrum of certain products of random matrices
-  advisor: Manjunath K.
+  advisor: Manjunath Krishnapur
+  present: postdoctoral associate, NYU, Abu-Dhabi
 
 - name: Ratna Pal
   year: 2016
@@ -952,8 +955,10 @@
   year: 2017
   title: "Hole probabilities for determinantal point processes in the complex plane"
   advisor: Manjunath Krishnapur
+  present: postdoctoral fellow, ISI, Kolkata
 
 - name: S Nanda Kishore Reddy
   year: 2017
   title: "Eigenvalues of products of random matrices"
   advisor: Manjunath Krishnapur
+  present: ISF-UGC visiting scientist, ISI, Bangalore
