--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -59,7 +59,7 @@
 - name: Thirupathi Gudi
   user-id: gudi
   position: Associate Professor
-  research-areas: Numerical analysis, partial differentiale equations
+  research-areas: Numerical analysis, partial differential equations
   phd: IIT Bombay
   phone-ext: 3208
 
