--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -224,7 +224,7 @@
   user-id	:	sruthisekar
   year-of-joining: 2014
   programme: Integrated PhD
-
+  webpage: https://sruthisekar.wordpress.com/
 
 - name	:	Abu Sufian
   user-id	:	abusufian
