--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -4,6 +4,7 @@
   research-areas: Probability, combinatorics, statistical mechanics, mathematical physics, experimental mathematics
   phd: Rutgers
   phone-ext: 3215
+  office: X15
 
 - name: Abhishek Banerjee
   user-id: abhishek
@@ -11,6 +12,7 @@
   research-areas: Algebraic geometry, noncommutative geometry
   phd: Johns Hopkins
   phone-ext: 3326
+  office: X05
   website: https://sites.google.com/site/abhishekb1313/
 
 - name: Gautam Bharali
@@ -19,6 +21,7 @@
   research-areas: Several complex variables, complex-analytic dynamics
   phd: Wisconsin
   phone-ext: 3328
+  office: L19
 
 - name: Tirthankar Bhattacharya
   user-id: tirtha
@@ -26,6 +29,7 @@
   research-areas: Operator theory
   phd: ISI
   phone-ext: 2710
+  office: L27
 
 - name: Soumya Das
   user-id: somu
@@ -33,6 +37,7 @@
   research-areas: Number theory
   phd: HRI
   phone-ext: 3205
+  office: X03
   website: https://sites.google.com/site/somuhomepage/
 
 - name: Basudeb Datta
@@ -41,6 +46,7 @@
   research-areas: Algebraic and combinatorial topology
   phd: ISI
   phone-ext: 3211
+  office: X04
 
 - name: Siddhartha Gadgil
   user-id: gadgil
@@ -48,6 +54,7 @@
   research-areas: Geometric topology
   phd: Caltech
   phone-ext: 3209
+  office: N15
 
 - name: Mrinal K. Ghosh
   user-id: mkg
@@ -55,6 +62,7 @@
   research-areas: Stochastic control, Markov decision processes, stochastic dynamic games, stochastic hybrid Systems; applications of stochastic analysis to manufacturing systems, finance, etc.
   phd: IISc-TIFR
   phone-ext: 3210
+  office: L29
 
 - name: Thirupathi Gudi
   user-id: gudi
@@ -62,6 +70,7 @@
   research-areas: Numerical analysis, partial differential equations
   phd: IIT Bombay
   phone-ext: 3208
+  office: R26
 
 - name: Subhojoy Gupta
   user-id: subhojoy
@@ -69,6 +78,7 @@
   research-areas: Teichmueller theory, low dimensional geometry and topology
   phd: Yale
   phone-ext: 3330
+  office: X06
 
 - name: Srikanth K. Iyer
   user-id: skiyer
@@ -76,6 +86,7 @@
   research-areas: Theoretical and applied probability, statistics, branching particle systems, random geometric graphs, mathematical finance, credit-risk modelling, time-series analysis, Monte Carlo simulation
   phd: UC, Santa Barbara
   phone-ext: 3327
+  office: L15
 
 - name: Apoorva Khare
   user-id: khare
@@ -83,6 +94,7 @@
   phd: Chicago
   research-areas: Positivity and analysis; representation theory of Lie algebras; combinatorics and discrete mathematics (with connections to the two research areas above)
   phone-ext: 3214
+  office: R23
 
 - name: Manjunath Krishnapur
   user-id: manju
@@ -90,6 +102,7 @@
   research-areas: Probability theory (random matrix theory, zeros of random analytic functions)
   phd: UC, Berkeley
   phone-ext: 3207
+  office: N25
 
 - name: Gadadhar Misra
   user-id: gm
@@ -97,6 +110,7 @@
   research-areas: Functional analysis
   phd: Stony Brook
   phone-ext: 2712
+  office: L17
 
 - name: A. K. Nandakumaran
   user-id: nands
@@ -104,6 +118,7 @@
   research-areas: Partial differential equations, homogenization, controllability, optimal control and differential games; viscosity solutions
   phd: IISc-TIFR
   phone-ext: 2835
+  office: N27
 
 - name: E. K. Narayanan
   user-id: naru
@@ -111,6 +126,7 @@
   research-areas: Harmonic analysis
   phd: ISI
   phone-ext: 3270
+  office: N29
 
 - name: Dilip P. Patil
   user-id: patil
@@ -118,6 +134,7 @@
   research-areas: Commutative algebra and algebraic geometry
   phd: Bombay
   phone-ext: 3212
+  office: R25
 
 - name: Vamsi Pritham Pingali
   user-id: vamsipingali
@@ -125,6 +142,7 @@
   research-areas: Differential geometry, several complex variables, mathematical physics
   phd: Stony Brook
   phone-ext: 2754
+  office: N23
 
 - name: Govindan Rangarajan
   user-id: rangaraj
@@ -132,6 +150,7 @@
   research-areas: Nonlinear dynamics, time-series analysis
   phd: Maryland
   phone-ext: 3213
+  office: X17
 
 - name: Harish Seshadri
   user-id: harish
@@ -139,6 +158,7 @@
   research-areas: Differential geometry
   phd: Stony Brook
   phone-ext: 2709
+  office: R27
 
 - name: Pooja Singla
   user-id: pooja
@@ -146,6 +166,7 @@
   research-areas: Representation theory
   phd: IMSc
   phone-ext: 2571
+  office: L25
   website: https://sites.google.com/site/poojasingla7/Home
 
 - name: S. Thangavelu
@@ -154,6 +175,7 @@
   research-areas: Harmonic analysis
   phd: Princeton
   phone-ext: 3206
+  office: X14
 
 - name: R. Venkatesh
   user-id: rvenkat
@@ -161,6 +183,7 @@
   research-areas: Representation theory of infinite-dimensional Lie algebras
   phd: IMSc
   phone-ext: 3616
+  office: X01
 
 - name:  Kaushal Verma
   user-id: kverma
@@ -168,3 +191,4 @@
   research-areas: Several complex variables
   phd: Indiana
   phone-ext: 3216
+  office: L13
