vpn info as title, coxter groups course

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -102,7 +102,7 @@ jan2018:
       name: Random Graphs and interacting particle systems
       instructor: Srikanth Iyer
 
-    - code: MA xxx
+    - code: MA 386
       name: Coxeter Groups
       instructor: Arvind Ayyer
 
