courses: coxeter groups, geometric analysis

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -94,6 +94,10 @@ jan2018:
       name: Lie Algebras and their Representations
       instructor: R. Venkatesh
 
+    - code: MA 339
+      name: Geometric Analysis
+      instructor: Vamsi Pingali
+
     - code: MA 340
       name: Advanced Functional Analysis
       instructor: Tirthankar Bhattacharyya
