--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -73,42 +73,55 @@ jan2018:
     - code: MA 213
       name: Algebra II
       instructor: Abhishek Banerjee
+      timing: "Tue, Thu: 3:30-5:00"
 
     - code: MA 222
       name: Measure and Integration
       instructor: Manjunath Krishnapur
+      timing: "Tue, Thu: 2:00-3:30"
 
     - code: MA 224
       name: Complex Analysis
       instructor: Harish Seshadri
+      timing: "Tue, Thu: 11:00-12:30"
 
     - code: MA 229
       name: Calculus on Manifolds
       instructor: Basudeb Datta
+      timing: "Mon, Wed, Fri: 11:00-12:00"
 
     - code: MA 241
       name: Ordinary Differential Equations
       instructor: A. K. Nandakumaran
+      timing: "Tue, Thu: 9:30-11:00"
+
   electives:
     - code: MA 315
       name: Lie Algebras and their Representations
       instructor: R. Venkatesh
+      timing: "Tue, Thu: 11:00-12:30"
 
     - code: MA 339
       name: Geometric Analysis
       instructor: Vamsi Pingali
+      timing: "Tue, Thu: 2:00-3:30"
 
     - code: MA 340
       name: Advanced Functional Analysis
       instructor: Tirthankar Bhattacharyya
-
-    - code: MA 392
-      name: Random Graphs and interacting particle systems
-      instructor: Srikanth Iyer
+      timing: "Mon, Wed, Fri: 10:00-11:00"
 
     - code: MA 386
       name: Coxeter Groups
       instructor: Arvind Ayyer
+      timing: "Tue, Thu: 9:30-11:00"
+
+
+    - code: MA 392
+      name: Random Graphs and interacting particle systems
+      instructor: Srikanth Iyer
+      timing: "Tue, Thu: 11:00-12:30"
+
 
 jan2017:
   core1:
