--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -19,3 +19,6 @@
 
 - name	:	Tanmay Sarkar (Ph.D., IIT Madras)
   user-id	:	tanmaysarkar
+
+- name  :       Abhitosh Upadhyay (Ph.D., Guru Gobind Singh Indraprastha University Delhi)
+  user-id       :       abhitoshu
