--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -1,3 +1,6 @@
+- name  :       Gopal Datt (Ph.D., )
+  user-id       :       gopaldatt
+
 - name	:	Asha Kisan Dond (Ph.D., IIT Bombay)
   user-id	:	ashadond
 
