changes in faculty page

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -107,6 +107,7 @@
 - name: Gadadhar Misra
   user-id: gm
   position: Professor
+  chair: <b>Chairperson,</b> Department of Mathematics
   research-areas: Functional analysis
   phd: Stony Brook
   phone-ext: 2712
