--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -128,6 +128,7 @@ jan2018:
       name: Matrix Analysis and positivity
       instructor: Apoorva Khare
       timing: "Mon, Wed, Fri: 11:00-12:00"
+      webpage: http://www.math.iisc.ac.in/~khare/teaching.html
 
     - code: MA 386
       name: Coxeter Groups
