--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -127,7 +127,7 @@ jan2018:
     - code: MA 341
       name: Matrix Analysis and positivity
       instructor: Apoorva Khare
-      timing: "Mon, Wed, Fri: 11:00-12:00"
+      timing: "Wed, Fri: 11:00-12:30"
       webpage: http://www.math.iisc.ac.in/~khare/teaching.html
 
     - code: MA 386
