seminar update and mail id correction for abhi

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -7,7 +7,7 @@
   office: X15
 
 - name: Abhishek Banerjee
-  user-id: abhishek
+  user-id: abhi
   position: Assistant Professor
   research-areas: Algebraic geometry, noncommutative geometry
   phd: Johns Hopkins
