abhishek, somu entries, images

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -32,7 +32,7 @@
   office: L27
 
 - name: Soumya Das
-  user-id: somu
+  user-id: soumya
   position: Assistant Professor
   research-areas: Number theory
   phd: HRI
