--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -16,6 +16,8 @@
 - name	:	Kaustubh Manchanda (Ph.D., JNU)
   user-id	:	kaustubhm
 
+- name	:	 Vishnu Priya Nataraj (Ph.D., Bharathidasan University, Tamilnadu)
+  user-id	:	vishnupriyan
 
 - name : Debamalya Sain (Ph.D., Jadavpur)
   user-id: debamalyasain
