Postdoc web page update

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -1,3 +1,6 @@
+- name  :       Mamta Balodi (Ph.D., MNNIT Allahabad)
+  user-id       :       mamtabalodi
+
 - name  :       Gopal Datt (Ph.D., )
   user-id       :       gopaldatt
 
